# autonomous-car-homeworks

0/task-1/: hey_cetino.cpp
0/task-2/: main.cpp
0/task-2/models/: Agency.cpp  Agency.h  Astronaut.cpp  Astronaut.h  Mission.cpp  Mission.h  Passenger.cpp  Passenger.h  Person.cpp  Person.h
1/homework/: main.cpp
1/homework/tests/: calculator.cpp  calculator.h
1/homework1/: main.cpp
1/homework1/enums/: religion.cpp
1/homework1/tests/: point.cpp  point.h
1/homework2/: a.out  matrix.h
1/task-1/: my_project
1/task-2/: my_project
1/task-2/enums/: religion.h
1/task-3/: main.cpp  matrix.cpp  my_project
2/task1/: main.cpp  my_project
2/task2/: main.cpp  my_project
3/: Untitled Document 1
4/: main.cpp  menu.cpp  menu.hpp
5/my_cpp_pkg/: CMakeLists.txt  package.xml
5/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  hardware_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
5/my_image_pkg/: CMakeLists.txt  package.xml
5/my_image_pkg/config/: config.yaml
5/my_image_pkg/src/: image_publisher.cpp  image_subscriber.cpp
5/my_robot_interfaces/: CMakeLists.txt  package.xml
5/my_robot_interfaces/srv/: SetLed.srv
5/my_turtlesim_joystick/: CMakeLists.txt  package.xml
5/my_turtlesim_joystick/src/: joystick.cpp
6/turtlesim_path_planner/: CMakeLists.txt  package.xml
6/turtlesim_path_planner/src/: turtle.cpp  turtle_pure_pursuit.cpp
8/lane_detection/: CMakeLists.txt  package.xml
8/lane_detection/src/: deneme.cpp  edge_detection.cpp  edge_detection.h  edge_detection.py  lane.cpp  lane.py  lane_deneme.cpp  lane_deneme_ana_kod.cpp  way.cpp
